# KerionGL

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
include/keriongl/: color.h  rectangle.h  shape.h  triangle.h  version.h  window.h
src/: main.cpp  rectangle.cpp  triangle.cpp  window.cpp
tests/: CMakeLists.txt  test_version.cpp  test_window.cpp
